--- a/DemoLogin/appsettings.Development.json
+++ b/DemoLogin/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=JOHANFLOYD; Database=DemoLoginDb; Trusted_Connection=True; Trust Server Certificate=True;"
+    "DefaultConnection": ""
   },
   "Logging": {
     "LogLevel": {
@@ -9,8 +9,8 @@
     }
   },
   "JwtSection": {
-    "Key": "WK5JR4NF8RAP0VJG20A5SJ9FFM07XTWO",
-    "Issuer": "https://localhost:7050",
-    "Audience": "https://localhost:7050"
+    "Key": "",
+    "Issuer": "",
+    "Audience": ""
   }
 }
