--- a/DemoLogin/Properties/launchSettings.json
+++ b/DemoLogin/Properties/launchSettings.json
@@ -13,7 +13,7 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7050;http://localhost:5107",
       "environmentVariables": {
